# xhail

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELATED_WORK.md  RESEARCH_FRAMING.md  XHAIL_AUDIT_AND_ROADMAP.md  ec.lp  ec_background.lp  environment.yml  example1.lp  generate_report.py  josh.lp  program.lp  pyproject.toml  pytest.ini  test.lp  test2.lp  xhail.py
.github/workflows/: ci.yml
case_studies/: ec.lp  emergency.lp  issue1.lp  issue2.lp  issue3.lp  issue4.lp  issue5.lp  penguins.lp
experiments/: plot_results.py  run_benchmarks.py
experiments/benchmarks/: animals.lp  blocks.lp  epidemic.lp  event_calculus.lp  grandfather.lp  penguins.lp  propositional.lp  sugar.lp  traffic.lp  trains.lp
play/: abductor_play.py  clingo_play.py  clingo_test.py  play.py
scripts/: generate_report.py
tests/: bug2.lp  conftest.py  deduction.lp  example1.lp  int_bug.lp  new_ec.lp  opt.lp  spam.lp  test_benchmarks.py  test_cli.py  test_internals.py  test_language.py  test_phase0_regression.py  test_pipeline_edge_cases.py  test_public_api.py
web/backend/: Dockerfile  fly.toml  main.py  requirements.txt
web/frontend/: .env.example  .gitignore  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/frontend/app/: globals.css  layout.tsx  page.tsx
xhail/: __init__.py  abduce.lp  abduction  abductor.py  cli.py  core.py  deduction  deduction.py  holder.txt  inducer  induction.py  model.py  modes  modes.py  parser.out  parser.py  parsetab.py  structures.py  terms  terms.py  test.lp  xhail.py
xhail/language/: __init__.py  structures.py  terms.py
xhail/output/: abduce.lp  abduction.lp  induce.lp  induction.lp  my.py
xhail/parser/: __init__.py  parser.out  parser.py  parsetab.py
xhail/reasoning/: __init__.py  abduction.py  deduction.py  induction.py  model.py  utils.py
xhail/state/: context.py  interface.py
